Fix a bug that topic dropdown may be covered by table column headers

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -169,7 +169,7 @@ body
 .row-position-title
   cursor: pointer
   background: $gray
-  z-index: $zindex-navbar-fixed
+  z-index: $zindex-navbar-fixed - 1 // It should not cover topic dropdown
   opacity: .95
   position: fixed
   left: 0
